salesforce-metadata/force-app/main/default/objects/Flow_Test_Run__c/Flow_Test_Run__c.object-meta.xml
<CustomObject>
    <label>Flow Test Run</label>
    <pluralLabel>Flow Test Runs</pluralLabel>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Flow Test Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>