salesforce-metadata/force-app/main/default/objects/Flow_Test_Run__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>