salesforce-metadata/force-app/main/default/objects/Flow_Test_Run__c/fields/Executed_By__c.field-meta.xml
<CustomField>
    <fullName>Executed_By__c</fullName>
    <label>Executed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>