salesforce-metadata/force-app/main/default/objects/Flow_Test_Run__c/fields/Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_API_Name__c</fullName>
    <label>Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>