salesforce-metadata/force-app/main/default/objects/Flow_Test_Run__c/fields/Flow_Type__c.field-meta.xml
<CustomField>
    <fullName>Flow_Type__c</fullName>
    <label>Flow Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Screen Flow</fullName>
            </value>
            <value>
                <fullName>Record-Triggered Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>