salesforce-metadata/force-app/main/default/objects/Flow_Test_Run__c/fields/Flow_Version__c.field-meta.xml
<CustomField>
    <fullName>Flow_Version__c</fullName>
    <label>Flow Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>