salesforce-metadata/force-app/main/default/objects/Flow_Test_Run__c/fields/Passed_Count__c.field-meta.xml
<CustomField>
    <fullName>Passed_Count__c</fullName>
    <label>Passed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>