salesforce-metadata/force-app/main/default/objects/Flow_Test_Run__c/fields/Total_Test_Cases__c.field-meta.xml
<CustomField>
    <fullName>Total_Test_Cases__c</fullName>
    <label>Total Test Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>